erDiagram
    employees ||--o{ campaign_targets : "targeted by"
    campaigns ||--o{ campaign_targets : "has"
    campaign_targets ||--o{ campaign_events : "tracks"

    employees {
        int id PK
        string email UK
        string name
        string department
        datetime created_at
    }

    campaigns {
        int id PK
        string name
        string template_key
        datetime start_time
        datetime end_time
        int approved
        int enable_sending
        string smtp_config
        string status
        datetime created_at
        datetime updated_at
    }

    campaign_targets {
        int id PK
        int campaign_id FK
        string recipient_email
        string recipient_name
        string token UK
        datetime created_at
    }

    campaign_events {
        int id PK
        int campaign_id FK
        string token FK
        string event_type
        string ip_hash
        int simulated_entry
        datetime created_at
    }

    system_settings {
        int id PK
        string key UK
        string value
        datetime updated_at
    }
